--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "nexus-iq-sdk"
+name = "sonatype-nexus-iq-sdk"
 version = "0.1.0"
 description = "Python SDK for Sonatype Nexus IQ Server"
 authors = ["Justin Bailey <justthered63@gmail.com>"]
