--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,117 @@ urllib3 = "^2.0.2"
 pytest = "^7.3.1"
 pytest-cov = "^4.1.0"
 pytest-randomly = "^3.12.0"
+black = "^23.3.0"
+coverage = "^7.2.7"
+flake8 = "^6.0.0"
+invoke = "^2.1.2"
+pylint = "^2.17.4"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 120
+target-version = ['py37', 'py38', 'py39', 'py310']
+include = '\.pyi?$'
+exclude = '''
+(
+  /(
+      \.eggs         # exclude a few common directories in the
+    | \.git          # root of the project
+    | \.hg
+    | \.mypy_cache
+    | \.tox
+    | \.venv
+    | _build
+    | buck-out
+    | build
+    | dist
+  )/
+)
+'''
+
+[tool.pylint.basic]
+# No docstrings required yet for private functions, or for test_* functions, or for inner Meta classes.
+no-docstring-rgx = "^(_|test_|Meta$)"
+# Don't complain about "pk" as a variable name
+good-names = """_,i,j,k,pk"""
+
+[tool.pylint.message_control]
+# TODO: re-enable and fix these as time permits
+# unused-import is already covered by flake8
+disable = """,
+    abstract-method,
+    arguments-renamed,
+    attribute-defined-outside-init,
+    broad-except,
+    consider-iterating-dictionary,
+    consider-using-from-import,
+    consider-using-in,
+    consider-using-generator,
+    cyclic-import,
+    duplicate-code,
+    empty-docstring,
+    exec-used,
+    fixme,
+    global-statement,
+    global-variable-not-assigned,
+    hard-coded-auth-user,
+    import-outside-toplevel,
+    invalid-name,
+    keyword-arg-before-vararg,
+    line-too-long,
+    logging-format-interpolation,
+    logging-fstring-interpolation,
+    missing-class-docstring,
+    missing-function-docstring,
+    missing-module-docstring,
+    modelform-uses-exclude,
+    no-else-raise,
+    no-else-return,
+    no-member,
+    not-callable,
+    pointless-statement,
+    pointless-string-statement,
+    protected-access,
+    raise-missing-from,
+    self-assigning-variable,
+    signature-differs,
+    super-init-not-called,
+    super-with-arguments,
+    superfluous-parens,
+    too-few-public-methods,
+    too-many-ancestors,
+    too-many-arguments,
+    too-many-boolean-expressions,
+    too-many-branches,
+    too-many-instance-attributes,
+    too-many-lines,
+    too-many-locals,
+    too-many-nested-blocks,
+    too-many-public-methods,
+    too-many-return-statements,
+    too-many-statements,
+    ungrouped-imports,
+    unnecessary-dunder-call,
+    unspecified-encoding,
+    unused-argument,
+    unused-import,
+    unused-wildcard-import,
+    use-maxsplit-arg,
+    wildcard-import,
+    wrong-import-order,
+    wrong-import-position,
+    """
+
+[tool.pylint.miscellaneous]
+# We don't want to fail on "TODO" comments as there are plenty of those in our code for good reason
+notes = """,
+    FIXME,
+    XXX,
+    """
+
+[tool.pylint.typecheck]
+# @patch changes the signature of a function it's applied to; don't raise "no-value-for-parameter" here
+signature-mutators = ["unittest.mock.patch"]
