--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,13 @@ coverage = "^7.2.7"
 flake8 = "^6.0.0"
 invoke = "^2.1.2"
 pylint = "^2.17.4"
+certifi = "^2023.5.7"
+frozendict = "^2.3.8"
+python-dateutil = "^2.8.2"
+setuptools = "^67.8.0"
+typing-extensions = "^4.6.3"
+six = "^1.16.0"
+urllib3 = "^2.0.2"
 
 [build-system]
 requires = ["poetry-core"]
