--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
   test:
     runs-on: "ubuntu-20.04"
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         python-version: ["3.9", "3.10", "3.11"]
     steps:
@@ -21,6 +21,12 @@ jobs:
         uses: "networktocode/gh-action-setup-poetry-environment@v5"
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: "Linting: black"
+        run: "poetry run black"
+
+      - name: "Linting: flake8"
+        run: "poetry run flake8"
 
       - name: "Testing: pytest and coverage"
         run: "poetry run pytest --cov=./ --cov-report xml"
